<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.savar_computer.healthassistants.EditProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="bottom"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerHeight2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignEnd="@+id/spinnerWeight"
                android:layout_alignRight="@+id/spinnerWeight"
                android:layout_alignTop="@+id/txtHeight"
                android:layout_weight="0.2"
                android:foregroundGravity="center" />

            <Spinner
                android:id="@+id/spinnerWeight2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/txtSex"
                android:layout_toLeftOf="@+id/txtWeight"
                android:layout_toStartOf="@+id/txtWeight"
                android:layout_weight="0.2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rdgSex2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonFemale2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/txtSex2"
                        android:layout_alignEnd="@+id/edtName2"
                        android:layout_alignRight="@+id/edtName2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Female" />

                    <RadioButton
                        android:id="@+id/radioButtonMale2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/radioButtonFemale2"
                        android:layout_toLeftOf="@+id/radioButtonFemale2"
                        android:layout_toStartOf="@+id/radioButtonFemale2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Male" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Image2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/btnImage2"
                        android:background="@drawable/profile" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnImage2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.5"
                    android:text="@string/btnImage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.2"
                android:gravity="bottom|center"
                android:text="@string/Name" />

            <TextView
                android:id="@+id/txtHeight2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignLeft="@+id/txtName2"
                android:layout_alignStart="@+id/txtName2"
                android:layout_below="@+id/edtName2"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/Height" />

            <TextView
                android:id="@+id/txtWeight2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignLeft="@+id/txtHeight2"
                android:layout_alignStart="@+id/txtHeight2"
                android:layout_centerVertical="true"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/Weight" />

            <TextView
                android:id="@+id/txtSex2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignLeft="@+id/txtName2"
                android:layout_alignStart="@+id/txtName2"
                android:layout_below="@+id/txtWeight2"
                android:layout_marginTop="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/Sex" />

            <TextView
                android:id="@+id/txtImage2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/spinnerWeight2"
                android:layout_toRightOf="@+id/spinnerWeight2"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/Image" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/Add" />

</LinearLayout>
